--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="titactoe.png"/>
     <title>Jogo da Velha</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -32,13 +33,12 @@
         <label id="jogador_selecionado"> </label>
     </div>
     <div class="vencedor">
-        <label> Vencedor: </label>
         <label id="vencedor_selecionado"> </label>
     </div>
 
     <div>
         <button onclick="reiniciar()">
-            Reiniciar
+            <b>Reiniciar</b>
         </button>
     </div>
 
